add_executable(d_vector d_vector.c)
add_executable(d_functional d_functional.c)
add_executable(d_stochastic d_stochastic.c)
add_executable(d_iter d_iter.c)
add_executable(d_linear d_linear.c)
add_executable(d_color d_color.c)

target_link_libraries(d_vector ejovo m)
target_link_libraries(d_functional ejovo m)
target_link_libraries(d_stochastic ejovo m)
target_link_libraries(d_iter ejovo m)
target_link_libraries(d_linear ejovo m)
target_link_libraries(d_color ejovo)

target_compile_options(d_iter PUBLIC -g)